{
    "name": "InputActions",
    "maps": [
        {
            "name": "MouseAction",
            "id": "613768bb-225b-49b4-8b49-60d59b516bb9",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "54948409-f038-4bee-b62d-90a7d90544bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "1c50de4f-c315-4f9f-8849-fb1e286b0c52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "c290ba24-e372-4ee2-8513-a65d3b14c3a6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Delta",
                    "type": "Value",
                    "id": "8888d98c-9e0d-494d-b790-51669fdf16cb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0e29cfe7-f8dd-484a-9f68-ef961a79bb30",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34262150-b927-4ffb-9775-58191e2e1248",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10afbfcb-0b72-4c53-981a-696f63df38ab",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9d22561-13f6-4654-a2c1-d83c34057288",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}